0.4
Image upload added
Added app name and version to startup and preferences window
Added hint to ctrl-alt-p to the create post button
Clicking and holding the mouse now moves the compose window not when you are in the text area (so you can select text again)
Added BSD license
Removed big 1024px startup image from soultion (smaller download) 
Fix: tray icon will now be removed on quitting the app

0.3
Added tray icon
Window layout changed (semi transparent, rounded corner, no more top bar)
Clicking and holding the mouse in a window moves it
Accounts listings (prefernces and combobox in compose window) now show the user avatar image
Selecting another account in combobox / compose window refocuses the text enter area
Fix: loading of more than one account failed (only first was loaded)

0.2
Upgrade to AppNet.NET 1.6.2
 - authorization of different accounts now possible without restarting the app
 - registry key to enable non-Quirks-Mode in Auth window added
Compose window now always on top
When opening the compose window the texbox to enter the posted is selected by default already
Compose window now has reminaing chars counter (and disables send button below zero)
List of accounts now with dark background (and because of this readable)
Hitting the close button of preferences now quits the app (of course later on tray icon instead)
Note: preferences are not updated automatically - you need to rauthorize

0.1
Initial release