@@ -9,7 +9,7 @@
     <Border Name="border_with_roundes_edges">
     <Grid Background="Transparent" MouseMove="Grid_MouseMove_1">
         <Controls:AutoCompleteTextbox x:Name="autoCompeteTextbox_post" Margin="10,10,10,41"/>
-        <Button Content="Send" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Name="button_send" Click="button_send_Click"/>
+        <Button ToolTip="Send post (ctrl-enter)" Content="Send" HorizontalAlignment="Right" Margin="0,0,10,10" VerticalAlignment="Bottom" Width="75" Name="button_send" Click="button_send_Click"/>
         <ComboBox Name="combobox_accounts" HorizontalAlignment="Right" Margin="0,0,90,10" VerticalAlignment="Bottom" Width="120" SelectionChanged="combobox_accounts_SelectionChanged" >
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
